--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "keywords": [
     "single-page-app"
   ],
-  "author": "Daniel Escobar <escobard90@gmail.com>",
+  "author": "Daniel Escobar <escobard90@gmail.com>"
+    "Adrian Filipescu"
+    "Alin Peta"
+    "Valentin Jercalau",
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0",
