--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,8 @@
     "paper-elements": "PolymerElements/paper-elements#1.0.1",
     "note-app-elements": "polymerlabs/note-app-elements",
     "polymerfire": "firebase/polymerfire#^0.10.3",
-    "paper-date-picker": "polymer-paper-datepicker#^1.2.0"
+    "paper-date-picker": "polymer-paper-datepicker#^1.2.0",
+    "l2t-paper-slider": "^1.2.6"
   },
   "devDependencies": {
     "web-component-tester": "^5.0.0"
