--- a/bower.json
+++ b/bower.json
@@ -24,7 +24,10 @@
     "note-app-elements": "polymerlabs/note-app-elements",
     "polymerfire": "firebase/polymerfire#^0.10.3",
     "paper-date-picker": "polymer-paper-datepicker#^1.2.0",
-    "l2t-paper-slider": "^1.2.6"
+    "l2t-paper-slider": "^1.2.6",
+    "google-map": "GoogleWebComponents/google-map#^1.1.10",
+    "geo-location": "geo-location#1.0.6"
+
   },
   "devDependencies": {
     "web-component-tester": "^5.0.0"
